--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
-.leftpic {
+h1 {
+    text-align: center;
+}
+.lyric {
+    text-align: center;
+    font-size: 70px;
+}
+.options {
+    margin: 0 auto;
+    width: 80%;
+}
+.pic {
     width: 50%;
     float: left;
 }
-.leftpic {
-    width: 50%;
-    float: left;
+img { 
+    width: 100%; 
+    height: 100%; 
 }
 .options {
     margin: auto;
