Improved accessibility features and data mgmt

--- a/style.css
+++ b/style.css
@@ -20,3 +20,21 @@ img {
 .options {
     margin: auto;
 }
+
+.nextLyric {
+    left: 0;
+    position: fixed;
+    text-align: center;
+    bottom: 0;
+    width: 100%;
+}
+#next {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 18px;
+}
