--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 h1 {
     text-align: center;
 }
@@ -7,7 +10,7 @@ h1 {
 }
 .options {
     margin: 0 auto;
-    width: 80%;
+    width: 60%;
 }
 .pic {
     width: 50%;
@@ -17,8 +20,9 @@ img {
     width: 100%; 
     height: 100%; 
 }
-.options {
-    margin: auto;
+.button {
+    width: 100%;
+    height: 380px;
 }
 
 .nextLyric {
@@ -29,21 +33,57 @@ img {
     width: 100%;
 }
 #next, #playagain {
-    background-color: #4CAF50; /* Green */
+    background-color: #7ebd51; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    font-size: 18px;
+    font-size: 24px;
+    width: 15%;
 }
 
 .score {
     text-align: center;
     font-size: 90px;
-    background-color: rgb(255, 224, 51);
-    width: 28%;
+    background-color:#f0d264;
     margin: auto;
-    border-style: dashed;
+    border-radius: 10px;
+}
+
+.instruction {
+    text-align: center;
+    font-size: 45px;
+}
+
+.player {
+    text-align: center;
+}
+
+.player button {
+    position: relative;
+	border: 0;
+	padding: 15px 25px;
+	display: inline-block;
+    text-align: center;
+    font-size: 24px;
+    color: white;
+    border-radius: 10px;
+}
+
+.playpause {
+    background-color: #cb99c5;
+}
+.stop {
+    background-color: #fa5a5a;
+}
+.rwd {
+    background-color:#ee9044 ;
+}
+.fwd {
+    background-color: #7fb1bf;
+}
+.time {
+    font-size: 40px;
 }
