A11y changes based on WAVE evaluation

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ img {
     width: 100%;
 }
 #next, #playagain {
-    background-color: #7ebd51; /* Green */
+    background-color: #60a330; /* Green */
     border: none;
     color: white;
     padding: 15px 32px;
